6gio30ngay19thang10nam2025

--- a/html/games-category/free-fire.html
+++ b/html/games-category/free-fire.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Free Fire - GameHub</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="../../../css/style.css">
+    <link rel="stylesheet" href="../style.css">
 </head>
 <body>
     <!-- Navigation -->
@@ -66,7 +66,7 @@
                             <p class="product-category">Skin: 5+ Hiếm</p>
                             <div class="product-footer">
                                 <span class="product-price">450.000₫</span>
-                                <button class="btn btn-sm btn-primary" onclick="showProductDetail({id: '288790', name: 'Free Fire Level 50', category: 'ACC FREE FIRE', price: '450.000₫', paymentPrice: '405.000₫', rank: 'K.Rank', description: 'Acc level 50 với 5+ skin hiếm, vũ khí đầy đủ.', contact: 'Zalo: 0852709912'})">Xem</button>
+                                <button class="btn btn-sm btn-primary" onclick="showProductDetail({id: '288790', name: 'Free Fire Level 50', category: 'ACC FREE FIRE', price: '450.000₫', paymentPrice: '405.000₫', rank: 'K.Rank', description: 'Acc level 50 với 5+ skin hiếm, vũ khí đầy đủ.', contact: 'Zalo:0971882507'})">Xem</button>
                             </div>
                         </div>
                     </div>
@@ -80,7 +80,7 @@
                             <p class="product-category">Skin: 10+ Hiếm</p>
                             <div class="product-footer">
                                 <span class="product-price">650.000₫</span>
-                                <button class="btn btn-sm btn-primary" onclick="showProductDetail({id: '288791', name: 'Free Fire Elite Pass', category: 'ACC FREE FIRE', price: '650.000₫', paymentPrice: '585.000₫', rank: 'K.Rank', description: 'Acc có Elite Pass + 10+ skin hiếm.', contact: 'Zalo: 0852709912'})">Xem</button>
+                                <button class="btn btn-sm btn-primary" onclick="showProductDetail({id: '288791', name: 'Free Fire Elite Pass', category: 'ACC FREE FIRE', price: '650.000₫', paymentPrice: '585.000₫', rank: 'K.Rank', description: 'Acc có Elite Pass + 10+ skin hiếm.', contact: 'Zalo:0971882507'})">Xem</button>
                             </div>
                         </div>
                     </div>
@@ -95,7 +95,7 @@
                             <p class="product-category">Skin: 3+ Hiếm</p>
                             <div class="product-footer">
                                 <span class="product-price">250.000₫</span>
-                                <button class="btn btn-sm btn-primary" onclick="showProductDetail({id: '288792', name: 'Free Fire Level 30', category: 'ACC FREE FIRE', price: '250.000₫', paymentPrice: '225.000₫', rank: 'K.Rank', description: 'Acc level 30 với 3+ skin hiếm.', contact: 'Zalo: 0852709912'})">Xem</button>
+                                <button class="btn btn-sm btn-primary" onclick="showProductDetail({id: '288792', name: 'Free Fire Level 30', category: 'ACC FREE FIRE', price: '250.000₫', paymentPrice: '225.000₫', rank: 'K.Rank', description: 'Acc level 30 với 3+ skin hiếm.', contact: 'Zalo:0971882507'})">Xem</button>
                             </div>
                         </div>
                     </div>
@@ -109,7 +109,7 @@
                             <p class="product-category">Skin: 15+ Hiếm</p>
                             <div class="product-footer">
                                 <span class="product-price">850.000₫</span>
-                                <button class="btn btn-sm btn-primary" onclick="showProductDetail({id: '288793', name: 'Free Fire Level 60', category: 'ACC FREE FIRE', price: '850.000₫', paymentPrice: '765.000₫', rank: 'K.Rank', description: 'Acc level 60 với 15+ skin hiếm, vũ khí full.', contact: 'Zalo: 0852709912'})">Xem</button>
+                                <button class="btn btn-sm btn-primary" onclick="showProductDetail({id: '288793', name: 'Free Fire Level 60', category: 'ACC FREE FIRE', price: '850.000₫', paymentPrice: '765.000₫', rank: 'K.Rank', description: 'Acc level 60 với 15+ skin hiếm, vũ khí full.', contact: 'Zalo:0971882507'})">Xem</button>
                             </div>
                         </div>
                     </div>
@@ -124,7 +124,7 @@
                             <p class="product-category">Skin: 7+ Hiếm</p>
                             <div class="product-footer">
                                 <span class="product-price">550.000₫</span>
-                                <button class="btn btn-sm btn-primary" onclick="showProductDetail({id: '288794', name: 'Free Fire Level 40', category: 'ACC FREE FIRE', price: '550.000₫', paymentPrice: '495.000₫', rank: 'K.Rank', description: 'Acc level 40 với 7+ skin hiếm.', contact: 'Zalo: 0852709912'})">Xem</button>
+                                <button class="btn btn-sm btn-primary" onclick="showProductDetail({id: '288794', name: 'Free Fire Level 40', category: 'ACC FREE FIRE', price: '550.000₫', paymentPrice: '495.000₫', rank: 'K.Rank', description: 'Acc level 40 với 7+ skin hiếm.', contact: 'Zalo:0971882507'})">Xem</button>
                             </div>
                         </div>
                     </div>
@@ -138,7 +138,7 @@
                             <p class="product-category">Skin: 12+ Hiếm</p>
                             <div class="product-footer">
                                 <span class="product-price">750.000₫</span>
-                                <button class="btn btn-sm btn-primary" onclick="showProductDetail({id: '288795', name: 'Free Fire Level 55', category: 'ACC FREE FIRE', price: '750.000₫', paymentPrice: '675.000₫', rank: 'K.Rank', description: 'Acc level 55 với 12+ skin hiếm.', contact: 'Zalo: 0852709912'})">Xem</button>
+                                <button class="btn btn-sm btn-primary" onclick="showProductDetail({id: '288795', name: 'Free Fire Level 55', category: 'ACC FREE FIRE', price: '750.000₫', paymentPrice: '675.000₫', rank: 'K.Rank', description: 'Acc level 55 với 12+ skin hiếm.', contact: 'Zalo:0971882507'})">Xem</button>
                             </div>
                         </div>
                     </div>
@@ -152,7 +152,7 @@
                             <p class="product-category">Skin: 8+ Hiếm</p>
                             <div class="product-footer">
                                 <span class="product-price">600.000₫</span>
-                                <button class="btn btn-sm btn-primary" onclick="showProductDetail({id: '288796', name: 'Free Fire Level 45', category: 'ACC FREE FIRE', price: '600.000₫', paymentPrice: '540.000₫', rank: 'K.Rank', description: 'Acc level 45 với 8+ skin hiếm.', contact: 'Zalo: 0852709912'})">Xem</button>
+                                <button class="btn btn-sm btn-primary" onclick="showProductDetail({id: '288796', name: 'Free Fire Level 45', category: 'ACC FREE FIRE', price: '600.000₫', paymentPrice: '540.000₫', rank: 'K.Rank', description: 'Acc level 45 với 8+ skin hiếm.', contact: 'Zalo:0971882507'})">Xem</button>
                             </div>
                         </div>
                     </div>
@@ -166,11 +166,34 @@
                             <p class="product-category">Skin: 4+ Hiếm</p>
                             <div class="product-footer">
                                 <span class="product-price">350.000₫</span>
-                                <button class="btn btn-sm btn-primary" onclick="showProductDetail({id: '288797', name: 'Free Fire Level 35', category: 'ACC FREE FIRE', price: '350.000₫', paymentPrice: '315.000₫', rank: 'K.Rank', description: 'Acc level 35 với 4+ skin hiếm.', contact: 'Zalo: 0852709912'})">Xem</button>
+                                <button class="btn btn-sm btn-primary" onclick="showProductDetail({id: '288797', name: 'Free Fire Level 35', category: 'ACC FREE FIRE', price: '350.000₫', paymentPrice: '315.000₫', rank: 'K.Rank', description: 'Acc level 35 với 4+ skin hiếm.', contact: 'Zalo:0971882507'})">Xem</button>
                             </div>
                         </div>
                     </div>
                 </div>
+            </div>
+
+            <!-- Pagination -->
+            <div class="pagination-container mt-5">
+                <nav aria-label="Page navigation">
+                    <ul class="pagination justify-content-center">
+                        <li class="page-item">
+                            <a class="page-link" href="#" aria-label="Previous">
+                                <span aria-hidden="true">&laquo;</span>
+                            </a>
+                        </li>
+                        <li class="page-item active"><a class="page-link" href="#">1</a></li>
+                        <li class="page-item"><a class="page-link" href="#">2</a></li>
+                        <li class="page-item"><a class="page-link" href="#">3</a></li>
+                        <li class="page-item"><a class="page-link" href="#">4</a></li>
+                        <li class="page-item"><a class="page-link" href="#">5</a></li>
+                        <li class="page-item">
+                            <a class="page-link" href="#" aria-label="Next">
+                                <span aria-hidden="true">&raquo;</span>
+                            </a>
+                        </li>
+                    </ul>
+                </nav>
             </div>
         </div>
     </section>
@@ -241,7 +264,7 @@
                                     </div>
                                     <div class="detail-item">
                                         <span class="detail-label">▸ Liên hệ</span>
-                                        <span class="detail-value" id="productContact">Zalo: 0852709912</span>
+                                        <span class="detail-value" id="productContact">Zalo:0971882507</span>
                                     </div>
                                 </div>
 
