--- a/html/games-category/roblox.html
+++ b/html/games-category/roblox.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Roblox - GameHub</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="../../../css/style.css">
+    <link rel="stylesheet" href="../style.css">
 </head>
 <body>
     <!-- Navigation -->
@@ -57,120 +57,99 @@
 
             <!-- Product Grid -->
             <div class="row g-4">
-                <div class="col-lg-3 col-md-4 col-sm-6">
-                    <div class="product-card">
-                        <div class="product-badge">Hot</div>
-                        <img src="/placeholder.svg?height=250&width=250" alt="Roblox Premium" class="product-image">
-                        <div class="product-info">
-                            <h5 class="product-title">Roblox Premium Account</h5>
-                            <p class="product-category">Robux: 50K+</p>
-                            <div class="product-footer">
-                                <span class="product-price">550.000₫</span>
-                                <button class="btn btn-sm btn-primary" onclick="showProductDetail('Roblox Premium Account', '550.000₫', 'Acc Roblox Premium với 50K+ Robux.')">Xem</button>
+                <div class="col-lg-6">
+                    <div class="product-gallery">
+                        <div class="main-image-container" id="mainImageContainer">
+                            <img id="mainImage" src="/placeholder.svg?height=500&width=500" alt="Product" class="main-image" draggable="true">
+                            <div class="image-nav-arrow left" onclick="previousImage()">❮</div>
+                            <div class="image-nav-arrow right" onclick="nextImage()">❯</div>
+                        </div>
+                        
+                        <div class="thumbnail-container">
+                            <div class="thumbnail-scroll" id="thumbnailScroll">
+                                <img src="/placeholder.svg?height=80&width=80" class="thumbnail active" onclick="selectThumbnail(this, 0)">
+                                <img src="/placeholder.svg?height=80&width=80" class="thumbnail" onclick="selectThumbnail(this, 1)">
+                                <img src="/placeholder.svg?height=80&width=80" class="thumbnail" onclick="selectThumbnail(this, 2)">
+                                <img src="/placeholder.svg?height=80&width=80" class="thumbnail" onclick="selectThumbnail(this, 3)">
+                                <img src="/placeholder.svg?height=80&width=80" class="thumbnail" onclick="selectThumbnail(this, 4)">
                             </div>
+                            <button class="thumbnail-nav-btn right" onclick="scrollThumbnails('right')">›</button>
                         </div>
                     </div>
                 </div>
 
-                <div class="col-lg-3 col-md-4 col-sm-6">
-                    <div class="product-card">
-                        <img src="/placeholder.svg?height=250&width=250" alt="Roblox 100K Robux" class="product-image">
-                        <div class="product-info">
-                            <h5 class="product-title">Roblox Acc + 100K Robux</h5>
-                            <p class="product-category">Robux: 100K+</p>
-                            <div class="product-footer">
-                                <span class="product-price">1.200.000₫</span>
-                                <button class="btn btn-sm btn-primary" onclick="showProductDetail('Roblox Acc + 100K Robux', '1.200.000₫', 'Acc Roblox kèm 100K+ Robux.')">Xem</button>
+                <div class="col-lg-6">
+                    <div class="product-detail-info">
+                        <div class="product-header-info">
+                            <div class="info-badge">
+                                <strong>MÃ SỐ:</strong> <span id="productId">288790</span>
+                            </div>
+                            <div class="info-badge">
+                                <strong>MỤC:</strong> <span id="productCategory">ACC ROBLOX</span>
                             </div>
                         </div>
-                    </div>
-                </div>
 
-                <div class="col-lg-3 col-md-4 col-sm-6">
-                    <div class="product-card">
-                        <div class="product-badge sale">Giảm Giá</div>
-                        <img src="/placeholder.svg?height=250&width=250" alt="Roblox 20K Robux" class="product-image">
-                        <div class="product-info">
-                            <h5 class="product-title">Roblox Acc + 20K Robux</h5>
-                            <p class="product-category">Robux: 20K+</p>
-                            <div class="product-footer">
-                                <span class="product-price">300.000₫</span>
-                                <button class="btn btn-sm btn-primary" onclick="showProductDetail('Roblox Acc + 20K Robux', '300.000₫', 'Acc Roblox kèm 20K+ Robux.')">Xem</button>
-                            </div>
-                        </div>
-                    </div>
-                </div>
+                        <h2 id="productTitle" class="product-detail-title">Roblox Premium Account</h2>
 
-                <div class="col-lg-3 col-md-4 col-sm-6">
-                    <div class="product-card">
-                        <img src="/placeholder.svg?height=250&width=250" alt="Roblox 75K Robux" class="product-image">
-                        <div class="product-info">
-                            <h5 class="product-title">Roblox Acc + 75K Robux</h5>
-                            <p class="product-category">Robux: 75K+</p>
-                            <div class="product-footer">
-                                <span class="product-price">950.000₫</span>
-                                <button class="btn btn-sm btn-primary" onclick="showProductDetail('Roblox Acc + 75K Robux', '950.000₫', 'Acc Roblox kèm 75K+ Robux.')">Xem</button>
+                        <div class="price-section">
+                            <div class="price-item">
+                                <span class="price-label">Giá</span>
+                                <span class="price-value" id="productPrice">550.000₫</span>
+                            </div>
+                            <div class="price-item">
+                                <span class="price-label">ATM/MOMO chỉ cần</span>
+                                <span class="price-value payment-price" id="paymentPrice">495.000₫</span>
                             </div>
                         </div>
-                    </div>
-                </div>
 
-                <div class="col-lg-3 col-md-4 col-sm-6">
-                    <div class="product-card">
-                        <div class="product-badge">Mới</div>
-                        <img src="/placeholder.svg?height=250&width=250" alt="Roblox 35K Robux" class="product-image">
-                        <div class="product-info">
-                            <h5 class="product-title">Roblox Acc + 35K Robux</h5>
-                            <p class="product-category">Robux: 35K+</p>
-                            <div class="product-footer">
-                                <span class="product-price">500.000₫</span>
-                                <button class="btn btn-sm btn-primary" onclick="showProductDetail('Roblox Acc + 35K Robux', '500.000₫', 'Acc Roblox kèm 35K+ Robux.')">Xem</button>
+                        <div class="details-section">
+                            <div class="detail-item">
+                                <span class="detail-label">▸ Robux</span>
+                                <span class="detail-value" id="productRank">50K+</span>
+                            </div>
+                            <div class="detail-item">
+                                <span class="detail-label">▸ Ghi chú</span>
+                                <span class="detail-value" id="productDescription">Acc Roblox Premium với 50K+ Robux.</span>
+                            </div>
+                            <div class="detail-item">
+                                <span class="detail-label">▸ Liên hệ</span>
+                                <span class="detail-value" id="productContact">Zalo:0971882507</span>
                             </div>
                         </div>
-                    </div>
-                </div>
 
-                <div class="col-lg-3 col-md-4 col-sm-6">
-                    <div class="product-card">
-                        <img src="/placeholder.svg?height=250&width=250" alt="Roblox 150K Robux" class="product-image">
-                        <div class="product-info">
-                            <h5 class="product-title">Roblox Acc + 150K Robux</h5>
-                            <p class="product-category">Robux: 150K+</p>
-                            <div class="product-footer">
-                                <span class="product-price">1.800.000₫</span>
-                                <button class="btn btn-sm btn-primary" onclick="showProductDetail('Roblox Acc + 150K Robux', '1.800.000₫', 'Acc Roblox kèm 150K+ Robux.')">Xem</button>
-                            </div>
-                        </div>
-                    </div>
-                </div>
+                        <button class="btn btn-danger btn-lg w-100 mt-4 mb-3">
+                            🛒 MUA NGAY
+                        </button>
 
-                <div class="col-lg-3 col-md-4 col-sm-6">
-                    <div class="product-card">
-                        <img src="/placeholder.svg?height=250&width=250" alt="Roblox 60K Robux" class="product-image">
-                        <div class="product-info">
-                            <h5 class="product-title">Roblox Acc + 60K Robux</h5>
-                            <p class="product-category">Robux: 60K+</p>
-                            <div class="product-footer">
-                                <span class="product-price">850.000₫</span>
-                                <button class="btn btn-sm btn-primary" onclick="showProductDetail('Roblox Acc + 60K Robux', '850.000₫', 'Acc Roblox kèm 60K+ Robux.')">Xem</button>
-                            </div>
+                        <div class="payment-info">
+                            <p class="mb-2"><strong>NAP QUA ATM/MOMO</strong></p>
+                            <a href="#" class="view-link">XEM TẠI ĐÂY →</a>
                         </div>
                     </div>
                 </div>
+            </div>
 
-                <div class="col-lg-3 col-md-4 col-sm-6">
-                    <div class="product-card">
-                        <img src="/placeholder.svg?height=250&width=250" alt="Roblox 10K Robux" class="product-image">
-                        <div class="product-info">
-                            <h5 class="product-title">Roblox Acc + 10K Robux</h5>
-                            <p class="product-category">Robux: 10K+</p>
-                            <div class="product-footer">
-                                <span class="product-price">200.000₫</span>
-                                <button class="btn btn-sm btn-primary" onclick="showProductDetail('Roblox Acc + 10K Robux', '200.000₫', 'Acc Roblox kèm 10K+ Robux.')">Xem</button>
-                            </div>
-                        </div>
-                    </div>
-                </div>
+            <!-- Pagination -->
+            <div class="pagination-container mt-5">
+                <nav aria-label="Page navigation">
+                    <ul class="pagination justify-content-center">
+                        <li class="page-item">
+                            <a class="page-link" href="#" aria-label="Previous">
+                                <span aria-hidden="true">&laquo;</span>
+                            </a>
+                        </li>
+                        <li class="page-item active"><a class="page-link" href="#">1</a></li>
+                        <li class="page-item"><a class="page-link" href="#">2</a></li>
+                        <li class="page-item"><a class="page-link" href="#">3</a></li>
+                        <li class="page-item"><a class="page-link" href="#">4</a></li>
+                        <li class="page-item"><a class="page-link" href="#">5</a></li>
+                        <li class="page-item">
+                            <a class="page-link" href="#" aria-label="Next">
+                                <span aria-hidden="true">&raquo;</span>
+                            </a>
+                        </li>
+                    </ul>
+                </nav>
             </div>
         </div>
     </section>
