--- a/html/mains/main.html
+++ b/html/mains/main.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MarketHub - Sàn Mua Bán Trực Tuyến</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
      Navigation 
@@ -20,9 +20,6 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
-                    <li class="nav-item">
-                        <a class="nav-link" href="mainforgames.html">Mua & Bán Tài Khoản Games</a>
-                    </li>
                     <li class="nav-item">
                         <a class="nav-link active" href="#products">Sản Phẩm</a>
                     </li>
@@ -50,7 +47,6 @@
                     <div class="hero-actions">
                         <a href="sell.html" class="btn btn-primary btn-lg">Bắt Đầu Bán</a>
                         <a href="#products" class="btn btn-outline-light btn-lg ms-3">Xem Sản Phẩm</a>
-                        <a href="mainforgames.html" class="btn btn-outline-light btn-lg ms-3">Mua Bán Tài Khoản Games?</a>
                     </div>
                 </div>
                 <div class="col-lg-6">
@@ -67,112 +63,6 @@
                             <h3>50K+</h3>
                             <p>Giao Dịch</p>
                         </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-
-         Flash Sale 24h 
-    <section class="flash-sale" id="flash-sale">
-        <div class="container">
-            <div class="flash-sale-header">
-                <div class="flash-sale-title">
-                    <span class="flash-icon">⚡</span>
-                    <h2>Flash Sale 24h</h2>
-                </div>
-                <div class="countdown-timer">
-                    <div class="countdown-item">
-                        <span class="countdown-value" id="hours">00</span>
-                        <span class="countdown-label">Giờ</span>
-                    </div>
-                    <span class="countdown-separator">:</span>
-                    <div class="countdown-item">
-                        <span class="countdown-value" id="minutes">00</span>
-                        <span class="countdown-label">Phút</span>
-                    </div>
-                    <span class="countdown-separator">:</span>
-                    <div class="countdown-item">
-                        <span class="countdown-value" id="seconds">00</span>
-                        <span class="countdown-label">Giây</span>
-                    </div>
-                </div>
-            </div>
-
-            <div class="flash-sale-products">
-                <div class="flash-product-card">
-                    <div class="flash-discount">-40%</div>
-                    <img src="/placeholder.svg?height=200&width=200" alt="Tai Nghe Không Dây" class="flash-product-image">
-                    <div class="flash-product-info">
-                        <h5>Tai Nghe Không Dây Premium</h5>
-                        <div class="flash-price-section">
-                            <span class="flash-original-price">12.500.000₫</span>
-                            <span class="flash-sale-price">7.500.000₫</span>
-                        </div>
-                        <div class="flash-stock">
-                            <div class="stock-bar">
-                                <div class="stock-fill" style="width: 75%;"></div>
-                            </div>
-                            <span class="stock-text">Còn 45/60 sản phẩm</span>
-                        </div>
-                        <button class="btn btn-danger btn-sm w-100 mt-2">Mua Ngay</button>
-                    </div>
-                </div>
-
-                <div class="flash-product-card">
-                    <div class="flash-discount">-35%</div>
-                    <img src="/placeholder.svg?height=200&width=200" alt="Đồng Hồ Thông Minh" class="flash-product-image">
-                    <div class="flash-product-info">
-                        <h5>Đồng Hồ Thông Minh Pro</h5>
-                        <div class="flash-price-section">
-                            <span class="flash-original-price">8.000.000₫</span>
-                            <span class="flash-sale-price">5.200.000₫</span>
-                        </div>
-                        <div class="flash-stock">
-                            <div class="stock-bar">
-                                <div class="stock-fill" style="width: 60%;"></div>
-                            </div>
-                            <span class="stock-text">Còn 30/50 sản phẩm</span>
-                        </div>
-                        <button class="btn btn-danger btn-sm w-100 mt-2">Mua Ngay</button>
-                    </div>
-                </div>
-
-                <div class="flash-product-card">
-                    <div class="flash-discount">-50%</div>
-                    <img src="/placeholder.svg?height=200&width=200" alt="Loa Bluetooth" class="flash-product-image">
-                    <div class="flash-product-info">
-                        <h5>Loa Bluetooth Cao Cấp</h5>
-                        <div class="flash-price-section">
-                            <span class="flash-original-price">4.000.000₫</span>
-                            <span class="flash-sale-price">2.000.000₫</span>
-                        </div>
-                        <div class="flash-stock">
-                            <div class="stock-bar">
-                                <div class="stock-fill" style="width: 90%;"></div>
-                            </div>
-                            <span class="stock-text">Còn 18/20 sản phẩm</span>
-                        </div>
-                        <button class="btn btn-danger btn-sm w-100 mt-2">Mua Ngay</button>
-                    </div>
-                </div>
-
-                <div class="flash-product-card">
-                    <div class="flash-discount">-30%</div>
-                    <img src="/placeholder.svg?height=200&width=200" alt="Bàn Phím Gaming" class="flash-product-image">
-                    <div class="flash-product-info">
-                        <h5>Bàn Phím Gaming RGB</h5>
-                        <div class="flash-price-section">
-                            <span class="flash-original-price">5.000.000₫</span>
-                            <span class="flash-sale-price">3.500.000₫</span>
-                        </div>
-                        <div class="flash-stock">
-                            <div class="stock-bar">
-                                <div class="stock-fill" style="width: 40%;"></div>
-                            </div>
-                            <span class="stock-text">Còn 8/20 sản phẩm</span>
-                        </div>
-                        <button class="btn btn-danger btn-sm w-100 mt-2">Mua Ngay</button>
                     </div>
                 </div>
             </div>
@@ -357,6 +247,112 @@
                                 <button class="btn btn-sm btn-primary" onclick="showProductDetail('Bình Nước Giữ Nhiệt', '750.000₫', 'Giữ đồ uống lạnh 24 giờ hoặc nóng 12 giờ với bình cao cấp này.')">Xem</button>
                             </div>
                         </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+     Flash Sale 24h 
+    <section class="flash-sale" id="flash-sale">
+        <div class="container">
+            <div class="flash-sale-header">
+                <div class="flash-sale-title">
+                    <span class="flash-icon">⚡</span>
+                    <h2>Flash Sale 24h</h2>
+                </div>
+                <div class="countdown-timer">
+                    <div class="countdown-item">
+                        <span class="countdown-value" id="hours">00</span>
+                        <span class="countdown-label">Giờ</span>
+                    </div>
+                    <span class="countdown-separator">:</span>
+                    <div class="countdown-item">
+                        <span class="countdown-value" id="minutes">00</span>
+                        <span class="countdown-label">Phút</span>
+                    </div>
+                    <span class="countdown-separator">:</span>
+                    <div class="countdown-item">
+                        <span class="countdown-value" id="seconds">00</span>
+                        <span class="countdown-label">Giây</span>
+                    </div>
+                </div>
+            </div>
+
+            <div class="flash-sale-products">
+                <div class="flash-product-card">
+                    <div class="flash-discount">-40%</div>
+                    <img src="/placeholder.svg?height=200&width=200" alt="Tai Nghe Không Dây" class="flash-product-image">
+                    <div class="flash-product-info">
+                        <h5>Tai Nghe Không Dây Premium</h5>
+                        <div class="flash-price-section">
+                            <span class="flash-original-price">12.500.000₫</span>
+                            <span class="flash-sale-price">7.500.000₫</span>
+                        </div>
+                        <div class="flash-stock">
+                            <div class="stock-bar">
+                                <div class="stock-fill" style="width: 75%;"></div>
+                            </div>
+                            <span class="stock-text">Còn 45/60 sản phẩm</span>
+                        </div>
+                        <button class="btn btn-danger btn-sm w-100 mt-2">Mua Ngay</button>
+                    </div>
+                </div>
+
+                <div class="flash-product-card">
+                    <div class="flash-discount">-35%</div>
+                    <img src="/placeholder.svg?height=200&width=200" alt="Đồng Hồ Thông Minh" class="flash-product-image">
+                    <div class="flash-product-info">
+                        <h5>Đồng Hồ Thông Minh Pro</h5>
+                        <div class="flash-price-section">
+                            <span class="flash-original-price">8.000.000₫</span>
+                            <span class="flash-sale-price">5.200.000₫</span>
+                        </div>
+                        <div class="flash-stock">
+                            <div class="stock-bar">
+                                <div class="stock-fill" style="width: 60%;"></div>
+                            </div>
+                            <span class="stock-text">Còn 30/50 sản phẩm</span>
+                        </div>
+                        <button class="btn btn-danger btn-sm w-100 mt-2">Mua Ngay</button>
+                    </div>
+                </div>
+
+                <div class="flash-product-card">
+                    <div class="flash-discount">-50%</div>
+                    <img src="/placeholder.svg?height=200&width=200" alt="Loa Bluetooth" class="flash-product-image">
+                    <div class="flash-product-info">
+                        <h5>Loa Bluetooth Cao Cấp</h5>
+                        <div class="flash-price-section">
+                            <span class="flash-original-price">4.000.000₫</span>
+                            <span class="flash-sale-price">2.000.000₫</span>
+                        </div>
+                        <div class="flash-stock">
+                            <div class="stock-bar">
+                                <div class="stock-fill" style="width: 90%;"></div>
+                            </div>
+                            <span class="stock-text">Còn 18/20 sản phẩm</span>
+                        </div>
+                        <button class="btn btn-danger btn-sm w-100 mt-2">Mua Ngay</button>
+                    </div>
+                </div>
+
+                <div class="flash-product-card">
+                    <div class="flash-discount">-30%</div>
+                    <img src="/placeholder.svg?height=200&width=200" alt="Bàn Phím Gaming" class="flash-product-image">
+                    <div class="flash-product-info">
+                        <h5>Bàn Phím Gaming RGB</h5>
+                        <div class="flash-price-section">
+                            <span class="flash-original-price">5.000.000₫</span>
+                            <span class="flash-sale-price">3.500.000₫</span>
+                        </div>
+                        <div class="flash-stock">
+                            <div class="stock-bar">
+                                <div class="stock-fill" style="width: 40%;"></div>
+                            </div>
+                            <span class="stock-text">Còn 8/20 sản phẩm</span>
+                        </div>
+                        <button class="btn btn-danger btn-sm w-100 mt-2">Mua Ngay</button>
                     </div>
                 </div>
             </div>
