10gio30ngay25thang10nam2025

--- a/html/mains/mainforgames.html
+++ b/html/mains/mainforgames.html
@@ -134,7 +134,7 @@
             <div class="flash-sale-products">
                 <div class="flash-product-card">
                     <div class="flash-discount">-45%</div>
-                    <img src="/placeholder.svg?height=200&width=200" alt="Free Fire Acc" class="flash-product-image">
+                    <img src="https://images.unsplash.com/photo-1538481143235-5d630e50c6da?w=200&h=200&fit=crop" alt="Free Fire Acc" class="flash-product-image">
                     <div class="flash-product-info">
                         <h5>Free Fire Acc Level 50</h5>
                         <div class="flash-price-section">
@@ -153,7 +153,7 @@
 
                 <div class="flash-product-card">
                     <div class="flash-discount">-50%</div>
-                    <img src="/placeholder.svg?height=200&width=200" alt="Liên Quân Acc" class="flash-product-image">
+                    <img src="https://images.unsplash.com/photo-1552820728-8ac41f1ce891?w=200&h=200&fit=crop" alt="Liên Quân Acc" class="flash-product-image">
                     <div class="flash-product-info">
                         <h5>Liên Quân Acc Rank Vàng</h5>
                         <div class="flash-price-section">
@@ -172,7 +172,7 @@
 
                 <div class="flash-product-card">
                     <div class="flash-discount">-40%</div>
-                    <img src="/placeholder.svg?height=200&width=200" alt="Roblox Acc" class="flash-product-image">
+                    <img src="https://images.unsplash.com/photo-1511512578615-a3eb3dd08d33?w=200&h=200&fit=crop" alt="Roblox Acc" class="flash-product-image">
                     <div class="flash-product-info">
                         <h5>Roblox Acc Premium</h5>
                         <div class="flash-price-section">
@@ -191,7 +191,7 @@
 
                 <div class="flash-product-card">
                     <div class="flash-discount">-35%</div>
-                    <img src="/placeholder.svg?height=200&width=200" alt="Free Fire Elite" class="flash-product-image">
+                    <img src="https://images.unsplash.com/photo-1552820728-8ac41f1ce891?w=200&h=200&fit=crop" alt="Free Fire Elite" class="flash-product-image">
                     <div class="flash-product-info">
                         <h5>Free Fire Acc Elite Pass</h5>
                         <div class="flash-price-section">
@@ -228,7 +228,7 @@
                 <div class="col-lg-3 col-md-4 col-sm-6 product-item" data-category="Free Fire">
                     <div class="product-card">
                         <div class="product-badge">Hot</div>
-                        <img src="/placeholder.svg?height=250&width=250" alt="Free Fire Acc" class="product-image">
+                        <img src="https://images.unsplash.com/photo-1538481143235-5d630e50c6da?w=250&h=250&fit=crop" alt="Free Fire Acc" class="product-image">
                         <div class="product-info">
                             <h5 class="product-title">Free Fire Level 50</h5>
                             <p class="product-category">Free Fire</p>
@@ -242,7 +242,7 @@
 
                 <div class="col-lg-3 col-md-4 col-sm-6 product-item" data-category="Free Fire">
                     <div class="product-card">
-                        <img src="/placeholder.svg?height=250&width=250" alt="Free Fire Elite" class="product-image">
+                        <img src="https://images.unsplash.com/photo-1552820728-8ac41f1ce891?w=250&h=250&fit=crop" alt="Free Fire Elite" class="product-image">
                         <div class="product-info">
                             <h5 class="product-title">Free Fire Elite Pass</h5>
                             <p class="product-category">Free Fire</p>
@@ -258,7 +258,7 @@
                 <div class="col-lg-3 col-md-4 col-sm-6 product-item" data-category="Liên Quân">
                     <div class="product-card">
                         <div class="product-badge sale">Giảm Giá</div>
-                        <img src="/placeholder.svg?height=250&width=250" alt="Liên Quân Vàng" class="product-image">
+                        <img src="https://images.unsplash.com/photo-1511512578615-a3eb3dd08d33?w=250&h=250&fit=crop" alt="Liên Quân Vàng" class="product-image">
                         <div class="product-info">
                             <h5 class="product-title">Liên Quân Rank Vàng</h5>
                             <p class="product-category">Liên Quân</p>
@@ -272,7 +272,7 @@
 
                 <div class="col-lg-3 col-md-4 col-sm-6 product-item" data-category="Liên Quân">
                     <div class="product-card">
-                        <img src="/placeholder.svg?height=250&width=250" alt="Liên Quân Kim Cương" class="product-image">
+                        <img src="https://images.unsplash.com/photo-1552820728-8ac41f1ce891?w=250&h=250&fit=crop" alt="Liên Quân Kim Cương" class="product-image">
                         <div class="product-info">
                             <h5 class="product-title">Liên Quân Rank Kim Cương</h5>
                             <p class="product-category">Liên Quân</p>
@@ -288,7 +288,7 @@
                 <div class="col-lg-3 col-md-4 col-sm-6 product-item" data-category="Roblox">
                     <div class="product-card">
                         <div class="product-badge">Mới</div>
-                        <img src="/placeholder.svg?height=250&width=250" alt="Roblox Premium" class="product-image">
+                        <img src="https://images.unsplash.com/photo-1538481143235-5d630e50c6da?w=250&h=250&fit=crop" alt="Roblox Premium" class="product-image">
                         <div class="product-info">
                             <h5 class="product-title">Roblox Premium Account</h5>
                             <p class="product-category">Roblox</p>
@@ -302,7 +302,7 @@
 
                 <div class="col-lg-3 col-md-4 col-sm-6 product-item" data-category="Roblox">
                     <div class="product-card">
-                        <img src="/placeholder.svg?height=250&width=250" alt="Roblox Robux" class="product-image">
+                        <img src="https://images.unsplash.com/photo-1511512578615-a3eb3dd08d33?w=250&h=250&fit=crop" alt="Roblox Robux" class="product-image">
                         <div class="product-info">
                             <h5 class="product-title">Roblox Acc + 50K Robux</h5>
                             <p class="product-category">Roblox</p>
