--- a/html/games-category/lien-quan.html
+++ b/html/games-category/lien-quan.html
@@ -295,7 +295,7 @@
                 <div class="col-md-4">
                     <h5>Liên Kết Nhanh</h5>
                     <ul class="list-unstyled">
-                        <li><a href="../mainforgames.html">Trang Chủ</a></li>
+                        <li><a href="index.html">Trang Chủ</a></li>
                         <li><a href="#">Liên Hệ</a></li>
                         <li><a href="#">Điều Khoản</a></li>
                     </ul>
