--- a/html/games-category/lien-quan.html
+++ b/html/games-category/lien-quan.html
@@ -29,6 +29,21 @@
                     <li class="nav-item">
                         <button class="btn btn-primary ms-3">Đăng Nhập</button>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="index.html">Trang Chủ</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="index.html#products">Sản Phẩm</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="index.html#categories">Danh Mục</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="categories/sell.html">Bán Hàng</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link active" href="indexforgames.html">Games</a>
+                    </li>
                 </ul>
             </div>
         </div>
