--- a/html/games-category/lien-quan.html
+++ b/html/games-category/lien-quan.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Liên Quân - GameHub</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="../style.css">
+    <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
     <!-- Navigation -->
@@ -20,13 +20,6 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
-                    <li class="nav-item">
-                        <a class="nav-link" href="../mainforgames.html">Trang Chủ</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link active" href="#">Liên Quân</a>
-                    </li>
-                    <li class="nav-item">
                         <button class="btn btn-primary ms-3">Đăng Nhập</button>
                     </li>
                     <li class="nav-item">
