5gio46ngay2thang11nam2025

--- a/indexforgames.html
+++ b/indexforgames.html
@@ -21,15 +21,8 @@
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item">
                         <a class="nav-link" href="index.html">Trang Chủ</a>
-                    </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="index.html#products">Sản Phẩm</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="index.html#categories">Danh Mục</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="categories/sell.html">Bán Hàng</a>
+                        <a class="nav-link" href="/html/categories/sell.html">Bán Hàng</a>
                     </li>
                     <li class="nav-item">
                         <button class="btn btn-primary ms-3" onclick="window.location.href='authenticator/sign-in.html'">Đăng Nhập</button>
