4gio29ngay7thang11nam2025

--- a/html/games-category/free-fire.html
+++ b/html/games-category/free-fire.html
@@ -11,8 +11,8 @@
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container">
             <a class="navbar-brand" href="../mainforgames.html">
-                <span class="brand-icon">G</span>
-                GameHub
+                <span class="brand-icon">H</span>
+                HariGames
             </a>
             
             <button class="navbar-toggler" type="button" disabled>
