--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MarketHub - Sàn Giao Dịch Trực Tuyến</title>
+    <title>HariShopOnline - Sàn Giao Dịch Trực Tuyến</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="/css/style.css">
 </head>
@@ -11,8 +11,8 @@
     <nav class="navbar navbar-expand-lg navbar-dark">
         <div class="container">
             <a class="navbar-brand" href="index.html">
-                <span class="brand-icon">M</span>
-                MarketHub
+                <span class="brand-icon">H</span>
+                HariShopOnline
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
                 <span class="navbar-toggler-icon"></span>
@@ -46,7 +46,7 @@
         <div class="container">
             <div class="row align-items-center">
                 <div class="col-lg-6">
-                    <h1 class="hero-title">Chào Mừng Đến Với MarketHub</h1>
+                    <h1 class="hero-title">Chào Mừng Đến Với HariShopOnline</h1>
                     <p class="hero-subtitle">Nơi mua bán trực tuyến đáng tin cậy với hàng nghìn sản phẩm chất lượng</p>
                     <div class="mt-4">
                         <a href="#products" class="btn btn-primary btn-lg me-3">Khám Phá Ngay</a>
@@ -222,7 +222,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-4">
-                    <h5>MarketHub</h5>
+                    <h5>HariShopOnline</h5>
                     <p>Sàn giao dịch đáng tin cậy để mua bán sản phẩm chất lượng.</p>
                 </div>
                 <div class="col-md-4">
@@ -240,7 +240,7 @@
                 </div>
             </div>
             <hr class="my-4">
-            <p class="text-center mb-0">&copy; 2025 MarketHub. Tất cả quyền được bảo lưu.</p>
+            <p class="text-center mb-0">&copy; 2025 HariShopOnline. Tất cả quyền được bảo lưu.</p>
         </div>
     </footer>
 
