--- a/indexforgames.html
+++ b/indexforgames.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Games Hub - MarketHub</title>
+    <title>Games Hub - HariGames</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="/css/style.css">
 </head>
@@ -12,7 +12,7 @@
         <div class="container">
             <a class="navbar-brand" href="index.html">
                 <span class="brand-icon">M</span>
-                MarketHub
+                HariGames
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
                 <span class="navbar-toggler-icon"></span>
@@ -36,7 +36,8 @@
         <div class="container">
             <div class="row align-items-center">
                 <div class="col-lg-12 text-center">
-                    <h1 class="hero-title">Games Hub</h1>
+                    <h1 class="hero-title">HariGames
+                    </h1>
                     <p class="hero-subtitle">Khám phá và mua tài khoản, vật phẩm game yêu thích của bạn</p>
                 </div>
             </div>
@@ -215,7 +216,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-4">
-                    <h5>MarketHub Games</h5>
+                    <h5>HariGames</h5>
                     <p>Nền tảng giao dịch game uy tín và đáng tin cậy nhất Việt Nam.</p>
                 </div>
                 <div class="col-md-4">
@@ -233,7 +234,7 @@
                 </div>
             </div>
             <hr class="my-4">
-            <p class="text-center mb-0">&copy; 2025 MarketHub. Tất cả quyền được bảo lưu.</p>
+            <p class="text-center mb-0">&copy; 2025 HariGames. Tất cả quyền được bảo lưu.</p>
         </div>
     </footer>
 
